--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,6 +16,13 @@
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}">Amor</a>
+        {% if user.is_authenticated %}
+          <ul class="navbar-nav mr-auto">
+           <li class="nav-item">
+            <a href="{% url 'post_new' %}">+ New</a>
+          </li>
+         </ul>
+        {% endif %}
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
