--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,6 +1,7 @@
-<!-- templates/_base.html -->
+<!-- templates/_base2.html -->
 {% load static %}
 <!DOCTYPE html>
+
 <html>
 <head>
   <meta charset="utf-8">
@@ -16,36 +17,32 @@
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}">Amor</a>
-        {% if user.is_authenticated %}
-          <ul class="navbar-nav mr-auto">
-           <li class="nav-item">
-            <a href="{% url 'post_new' %}">+ New</a>
-          </li>
-         </ul>
-        {% endif %}
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center
+            mb-md-0">
           {% if user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'profile' %}">@{{ user.username }}</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_logout' %}">Log Out</a>
-          </li>
+            <li><a href="{% url 'post_new' %}" class="nav-link px-2 link">+ New</a></li>
+          </ul>
+          <div class="dropdown text-end">
+            <a href="#" class="d-block link text-decoration-none dropdown-toggle"
+              id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+              @{{ user.username }}
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownUser1">
+              <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+              <a class="dropdown-item" href="{% url 'home'%}">Account settings</a>
+              <a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a>
+            </div>
+          </div>
           {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_login' %}">Log In</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
-          </li>
+          </ul>
+          <div class="text-end">
+            <a href="{% url 'account_login' %}" class="btn btn-outline-primary me-2">Log In</a>
+            <a href="{% url 'account_signup' %}" class="btn btn-primary">Sign Up</a>
+          </div>
           {% endif %}
-        </ul>
-      </div>
+
     </div>
+
   </nav>
   <div class ="container">
     {% block content %}
