--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,7 +5,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Amor{% endblock title %}</title>
+  <title>{% block title %}BMT{% endblock title %}</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -16,23 +16,17 @@
 <body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home' %}">Amor</a>
+      <a class="navbar-brand" href="{% url 'home' %}">BMT tema 1</a>
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center
             mb-md-0">
           {% if user.is_authenticated %}
-            <li><a href="{% url 'post_new' %}" class="nav-link px-2 link">+ New</a></li>
+            <li><a href="#" class="nav-link px-2 link"> @{{ user.username }} </a></li>
           </ul>
-          <div class="dropdown text-end">
-            <a href="#" class="d-block link text-decoration-none dropdown-toggle"
-              id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-              @{{ user.username }}
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownUser1">
-              <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-              <a class="dropdown-item" href="{% url 'home'%}">Account settings</a>
-              <a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a>
-            </div>
+
+          <div class="text-end">
+            <a href="{% url 'account_logout' %}" class="btn btn-outline-primary me-2">Log out</a>
           </div>
+
           {% else %}
           </ul>
           <div class="text-end">
